# mcp-youtube-intelligence

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml  quality_test.py  quality_test2.py  test_real.py  test_synthetic.py  test_textrank_compare.py
src/mcp_youtube_intelligence/: __init__.py  cli.py  config.py  server.py  tools.py
src/mcp_youtube_intelligence/core/: collector.py  comments.py  entities.py  monitor.py  playlist.py  report.py  search.py  segmenter.py  summarizer.py  transcript.py
src/mcp_youtube_intelligence/storage/: base.py  postgres.py  sqlite.py
tests/: test_cli.py  test_comments.py  test_entities.py  test_local_llm.py  test_monitor.py  test_multi_llm.py  test_playlist.py  test_report.py  test_search.py  test_segmenter.py  test_storage.py  test_summarizer.py  test_transcript.py
