[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-youtube-intelligence"
version = "0.1.0"
description = "MCP server for YouTube video intelligence — transcripts, summaries, entities, and monitoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "youtube-transcript-api>=1.0.0",
    "yt-dlp>=2024.0.0",
    "feedparser>=6.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
llm = ["openai>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
mcp-youtube-intelligence = "mcp_youtube_intelligence.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_youtube_intelligence"]
