[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-youtube-intelligence"
version = "0.1.0"
description = "MCP server for YouTube video intelligence — transcripts, summaries, entities, topic segmentation, and channel monitoring. Token-optimized for LLM context windows."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "JangHyuckYun", email = "janghyeok@users.noreply.github.com"},
]
keywords = ["mcp", "youtube", "transcript", "llm", "ai", "summarization", "entity-extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Video",
]

[project.urls]
Homepage = "https://github.com/JangHyuckYun/mcp-youtube-intelligence"
Repository = "https://github.com/JangHyuckYun/mcp-youtube-intelligence"
Issues = "https://github.com/JangHyuckYun/mcp-youtube-intelligence/issues"
dependencies = [
    "mcp>=1.0.0",
    "youtube-transcript-api>=1.0.0",
    "yt-dlp>=2024.0.0",
    "feedparser>=6.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
llm = ["openai>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
mcp-youtube-intelligence = "mcp_youtube_intelligence.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_youtube_intelligence"]
