[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-youtube-intelligence"
version = "0.1.2"
description = "MCP server for YouTube video intelligence — transcripts, summaries, entities, topic segmentation, and channel monitoring. Token-optimized for LLM context windows."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "JangHyuckYun", email = "skg09203@naver.com"},
]
keywords = ["mcp", "youtube", "transcript", "llm", "ai", "summarization", "entity-extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "mcp>=1.0.0",
    "youtube-transcript-api>=1.0.0",
    "yt-dlp>=2024.0.0",
    "feedparser>=6.0",
    "aiosqlite>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/JangHyuckYun/mcp-youtube-intelligence"
Repository = "https://github.com/JangHyuckYun/mcp-youtube-intelligence"
Issues = "https://github.com/JangHyuckYun/mcp-youtube-intelligence/issues"

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
llm = ["openai>=1.0"]
anthropic-llm = ["anthropic>=0.30"]
google-llm = ["google-generativeai>=0.5"]
all-llm = ["openai>=1.0", "anthropic>=0.30", "google-generativeai>=0.5"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
mcp-youtube-intelligence = "mcp_youtube_intelligence.server:main"
mcp-yt = "mcp_youtube_intelligence.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_youtube_intelligence"]
